public/css/app.css
/* ... */
.result .results-wrapper .apartment-card .image-wrapper img {
  width: 100%;
  height: 100%;
  -o-object-fit: cover;
     object-fit: cover;
  -o-object-position: center;
     object-position: center;
}

.result .results-wrapper .apartment-card .info-wrapper {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0px 20px 0px 20px;
}

.result .results-wrapper .apartment-card .info-wrapper .main .title {
  overflow: hidden;
  max-height: 48px;
}

.result .results-wrapper .apartment-card .info-wrapper .main .title h5 {
  font-weight: 900;
}

.result .results-wrapper .apartment-card .info-wrapper .main .address {
  max-height: 48px;
  overflow: hidden;
}

.result .results-wrapper .apartment-card .info-wrapper ul {
  display: flex;
  align-items: flex-end;
  list-style: none;
  flex-wrap: wrap;
  padding: 0;
}

.result .results-wrapper .apartment-card .info-wrapper ul li {
  margin: 0 5px;
}

.result .results-wrapper .apartment-card .button-wrapper {
  height: 100%;
  padding-bottom: 15px;
  display: flex;
  flex-direction: column;
}

.result .results-wrapper .apartment-card .button-wrapper.space-between {
  justify-content: space-between;
}

.result .results-wrapper .apartment-card .button-wrapper.flex-end {
  justify-content: flex-end;
}

.result .results-wrapper .apartment-card .button-wrapper .badge {
  background-color: #00F087;
  color: #001533;
  padding: 10px 15px;
  margin-top: 10px;
  border-radius: 20px;
  font-size: 18px;
}

.result .results-wrapper .apartment-card .button-wrapper .btn-details {
  text-align: center;
  text-decoration: none;
  color: #001533;
  font-weight: bold;
  border: 2px #001533 solid;
  margin-top: 10px;
  padding: 2px 10px;
  border-radius: 20px;
  font-size: 18px;
  background-color: white;
  transition: background-color 0.3s;
  width: 114px;
}

.result .results-wrapper .apartment-card .button-wrapper .btn-details:hover {
  background-color: #00F087;
}

@media screen and (max-width: 576px) {
  .result .results-wrapper .apartment-card {
    height: 100%;
    flex-direction: column;
  }

  .result .results-wrapper .apartment-card .image-wrapper {
    width: 100%;
  }

  .result .results-wrapper .apartment-card .info-wrapper {
    padding: 0px;
  }

  .result .results-wrapper .apartment-card .info-wrapper .main h5 {
    margin: 20px 0px;
  }

  .result .results-wrapper .apartment-card .button-wrapper {
    width: 100%;
    flex-direction: row;
  }
}

.charts .content {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.charts .content h1 {
  padding: 20px 0px;
}

.charts .content .stats {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  width: 100vw;
  padding: 0px 20px;
}

.charts .content .stats-box {
  background-color: rgba(112, 112, 112, 0.4);
  width: 100%;
  max-width: 1000px;
  border-radius: 10px;
  margin: 10px;
}

.charts .content .stats-box h2 {
  padding-top: 20px;
  text-align: center;
}

.charts .content .stats-box canvas {
  width: 100%;
  padding: 5px;
}

.marker-icon {
  background-position: center;
  background-size: 22px 22px;
  border-radius: 50%;
  height: 22px;
  left: 4px;
  position: absolute;
  text-align: center;
  top: 3px;
  transform: rotate(45deg);
  width: 22px;
}

.marker {
  height: 30px;
  width: 30px;
}

.marker-content {
  background: #c30b82;
  border-radius: 50% 50% 50% 0;
  height: 30px;
  left: 50%;
  margin: -15px 0 0 -15px;
  position: absolute;
  top: 50%;
  transform: rotate(-45deg);
  width: 30px;
}

.marker-content::before {
  background: #ffffff;
  border-radius: 50%;
  content: "";
  height: 24px;
  margin: 3px 0 0 3px;
  position: absolute;
  width: 24px;
}

.marker-house {
  position: relative;
  width: 50px;
  height: 50px;
}

.marker-house::after {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  content: "";
  background-image: url("/img/home-solid-white.svg");
  background-color: #001533;
  background-repeat: no-repeat;
  background-size: 65%;
  background-position: 53% 55%;
  transform: rotate(-45deg);
  border-radius: 50% 50% 50% 0;
  border: 2px solid #00F087;
}

.marker-house:hover::after {
  background-color: #00F087;
  cursor: pointer;
}

.form {
  border: 2px #BDBDBD solid;
  box-shadow: 0px 0px 20px #aaa7a9;
  border-radius: 20px;
  padding: 15px;
  margin: 20px 0px;
}

.form h2 {
  padding: 10px 0px;
}

.form .input-style {
  border: 2px #001533 solid;
  border-radius: 15px;
}

.form .label {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  margin-bottom: 20px;
}

.form .label #primary {
  padding-right: 10px;
}

.form .label .label-style {
  border: 2px #001533 solid;
  border-radius: 20px;
  padding: 5px 15px;
  margin-bottom: 10px;
  background-color: #fafafa;
  font-weight: 600;
  transition: background-color 0.3s, color 0.3s;
}

.form .label .label-style input {
  background-color: #e3342f;
}

.form .label .label-style:hover {
  background-color: #e8e8e8;
  cursor: pointer;
}

.form .label .label-style.active {
  background-color: #001533;
  color: white;
}

.form .visibility {
  display: flex;
  align-items: center;
  border-radius: 20px;
  padding: 0px 15px;
  transition: background-color 0.3s, border 0.3s;
}

.form .visibility:hover {
  cursor: pointer;
}

.form .visibility label {
  padding: 7px 0px 0px 7px;
  width: 100%;
}

.form .visibility label:hover {
  cursor: pointer;
}

.form .visibility.bg-red {
  background-color: #e3342f;
  border: none;
  color: white;
}

.form .visibility.bg-green {
  background-color: #38c172;
  border: none;
  color: white;
}

.form .browse {
  display: flex;
  margin-top: 10px;
}

.form .browse label {
  background-color: #fafafa;
  border: 2px #001533 solid;
  padding: 5px 15px;
  border-radius: 20px;
  width: 100%;
  transition: background-color 0.3s;
  display: flex;
  justify-content: space-between;
}

.form .browse label span {
  font-style: italic;
}
/* ... */

